[package]
name = "himari_test_rs"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
dotenv = "0.15.0"
rand = "0.8.5"
log = "0.4.17"
env_logger = "0.9.1"
lazy_static = "1.4.0"

[dependencies.tokio]
version = "1.0"
features = ["macros", "rt-multi-thread"]

[dependencies.serenity]
default-features = false
features = ["builder", "chrono", "client", "gateway", "cache", "http", "model", "utils", "rustls_backend", "collector"]
version = "0.11"
